--- a/.eslintrc
+++ b/.eslintrc
@@ -162,6 +162,7 @@
     "jsx-a11y/media-has-caption": 0,
     "react/display-name": 0,
     "react/jsx-boolean-value": 0,
+    "react/jsx-tag-spacing": 0,
     "react/jsx-closing-bracket-location": 2,
     "react/jsx-curly-spacing": [2, "never"],
     "react/jsx-equals-spacing": [2, "never"],
